implement sync permission & fix bugs
