# app/http/controller/dashboard/permission_c.go
@@ -30,13 +30,13 @@ func PermissionIndex(c *fiber.Ctx) error {
 	page, limit, search, sort_by, sort := paginate.Paginate(c)
 	repository := repo.NewPermissionRepo(database.GetDB())
 
-	post_categories, count, err := repository.Index(limit, uint(limit*(page-1)), search, sort_by, sort)
+	permission, count, err := repository.Index(limit, uint(limit*(page-1)), search, sort_by, sort)
 
 	if err != nil {
 		return response.InternalServerError(c, err)
 	}
 
-	return response.Index(c, page, limit, count, post_categories)
+	return response.Index(c, page, limit, count, permission)
 }
 
 // PermissionShow func gets single permission.
@@ -54,17 +54,17 @@ func PermissionShow(c *fiber.Ctx) error {
 	ID := c.Params("id")
 
 	repository := repo.NewPermissionRepo(database.GetDB())
-	post_category, err := repository.Show(ID)
+	permission, err := repository.Show(ID)
 
 	if err != nil {
 		if err == sql.ErrNoRows {
 			return response.NotFound(c, err)
 		} else {
-			response.InternalServerError(c, err)
+			return response.InternalServerError(c, err)
 		}
 	}
 
-	return response.Show(c, post_category)
+	return response.Show(c, permission)
 }
 
 // PermissionStore func create permission.
@@ -73,20 +73,20 @@ func PermissionShow(c *fiber.Ctx) error {
 // @Tags Permission
 // @Accept multipart/form-data
 // @Produce json
-// @Param name formData string true "Name" default(Category Name)
+// @Param name formData string true "Name" default(Permission Name)
 // @Success 200 {object} response.PermissionResponse
 // @Failure 400,401,403 {object} response.ErrorResponse "Error"
 // @Security ApiKeyAuth
 // @Router /api/v1/dashboard/permission [post]
 func PermissionStore(c *fiber.Ctx) error {
-	post_category := &model.StorePermission{}
+	permission := &model.StorePermission{}
 
-	if err := c.BodyParser(post_category); err != nil {
+	if err := c.BodyParser(permission); err != nil {
 		return response.BadRequest(c, err)
 	}
 
 	repository := repo.NewPermissionRepo(database.GetDB())
-	res, err := repository.Store(post_category)
+	res, err := repository.Store(permission)
 
 	if err != nil {
 		return response.InternalServerError(c, err)
@@ -102,7 +102,7 @@ func PermissionStore(c *fiber.Ctx) error {
 // @Accept multipart/form-data
 // @Produce json
 // @Param id path string true "Permission ID" default(22863142-1cfe-48cc-9640-ea88926429a4)
-// @Param name formData string true "Name" default(Category Name Update)
+// @Param name formData string true "Name" default(Permission Name Update)
 // @Success 200 {object} response.PermissionResponse
 // @Failure 400,401,403,404 {object} response.ErrorResponse "Error"
 // @Security ApiKeyAuth
@@ -110,14 +110,14 @@ func PermissionStore(c *fiber.Ctx) error {
 func PermissionUpdate(c *fiber.Ctx) error {
 	ID := c.Params("id")
 
-	post_category := &model.UpdatePermission{}
+	permission := &model.UpdatePermission{}
 
-	if err := c.BodyParser(post_category); err != nil {
+	if err := c.BodyParser(permission); err != nil {
 		return response.BadRequest(c, err)
 	}
 
 	repository := repo.NewPermissionRepo(database.GetDB())
-	res, err := repository.Update(ID, post_category)
+	res, err := repository.Update(ID, permission)
 
 	if err != nil {
 		return response.InternalServerError(c, err)
