# app/model/dashboard/sync_permission_m.go
@@ -5,13 +5,12 @@ import (
 	"github.com/google/uuid"
 )
 
-type ShowRoleHasPermission struct {
+type ShowSyncPermission struct {
 	UUID       uuid.UUID         `db:"uuid" json:"uuid"`
 	Name       string            `db:"name" json:"name"`
 	Permission *jsonutil.JSONRaw `db:"permission" json:"permission"`
 }
 
-type StoreRoleHasPermission struct {
-	RoleUUID       string   `db:"role_uuid" json:"role_uuid"`
-	PermissionUUID []string `db:"permission_uuid" json:"permission_uuid"`
+type UpdateSyncPermission struct {
+	PermissionUUID []string `json:"permission_uuid" form:"permission_uuid"`
 }
