# docs/swagger.yaml
@@ -265,6 +265,15 @@ definitions:
       status:
         type: boolean
     type: object
+  response.SyncPermissionResponse:
+    properties:
+      data:
+        $ref: '#/definitions/dashboard.Permission'
+      message:
+        type: string
+      status:
+        type: boolean
+    type: object
   response.UserResponse:
     properties:
       data:
@@ -455,7 +464,7 @@ paths:
       - multipart/form-data
       description: Create permission.
       parameters:
-      - default: Category Name
+      - default: Permission Name
         description: Name
         in: formData
         name: name
@@ -575,7 +584,7 @@ paths:
         name: id
         required: true
         type: string
-      - default: Category Name Update
+      - default: Permission Name Update
         description: Name
         in: formData
         name: name
@@ -1137,7 +1146,7 @@ paths:
       - multipart/form-data
       description: Create role.
       parameters:
-      - default: Category Name
+      - default: Role Name
         description: Name
         in: formData
         name: name
@@ -1257,7 +1266,7 @@ paths:
         name: id
         required: true
         type: string
-      - default: Category Name Update
+      - default: Role Name Update
         description: Name
         in: formData
         name: name
@@ -1291,6 +1300,93 @@ paths:
       summary: Update role
       tags:
       - Role
+  /api/v1/dashboard/sync-permission/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get all permissions that role has.
+      parameters:
+      - default: 22863142-1cfe-48cc-9640-ea88926429a4
+        description: Role ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.SyncPermissionResponse'
+        "400":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "403":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all permissions that role has
+      tags:
+      - Sync Permission
+    put:
+      consumes:
+      - multipart/form-data
+      description: update permissions per role.
+      parameters:
+      - default: 22863142-1cfe-48cc-9640-ea88926429a4
+        description: Role ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - collectionFormat: multi
+        description: permission_uuid
+        in: formData
+        items:
+          type: string
+        name: permission_uuid
+        required: true
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.SyncPermissionResponse'
+        "400":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "403":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: update permissions per role
+      tags:
+      - Sync Permission
   /api/v1/dashboard/user:
     get:
       consumes:
@@ -1376,6 +1472,12 @@ paths:
         format: password
         in: formData
         name: password
+        required: true
+        type: string
+      - default: 22863142-1cfe-48cc-9640-ea88926429a4
+        description: Role ID
+        in: path
+        name: role_uuid
         required: true
         type: string
       produces:
@@ -1514,6 +1616,12 @@ paths:
         format: password
         in: formData
         name: password
+        required: true
+        type: string
+      - default: 22863142-1cfe-48cc-9640-ea88926429a4
+        description: Role ID
+        in: path
+        name: role_uuid
         required: true
         type: string
       produces:
